# asset-registration-service

./: Dockerfile  Pipfile  README.md  liquid_registry.service  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: CI.yml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
chart/templates/tests/: test-connection.yaml
templates/: list_files.html
