[tool.poetry]
name = "asset-registration-service"
version = "0.3.4"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "asset_registration_service"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.0"
fastapi = "^0.109.1"
python-decouple = "^3.8"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
